crates/deadline-cli/tests/cli/snapshots/cli__bundle__bundle_submit_access_denied_suggests_available_queues.snap
---
source: crates/deadline-cli/tests/cli/bundle.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpJeafju/suggest_case
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:65030"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:65030"
    AWS_ENDPOINT_URL_S3: "http://localhost:65030"
    AWS_ENDPOINT_URL_STS: "http://localhost:65030"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpJeafju/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpJeafju
---
success: false
exit_code: 1
----- stdout -----
Submitting to Queue: Test Queue

Hashing Attachments
Uploading Attachments
AccessDeniedException: No message
Available queues in farm farm-0123456789abcdef0123456789abcdef:
  queue-real  Real Queue

----- stderr -----
